// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choosing a wallet it renders all wallet options when in dev mode 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 90vh;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  margin-bottom: 24px;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 560px;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: left;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  margin: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: auto;
  min-width: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 8px;
  margin-bottom: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 64px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border: 0;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 8px;
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 64px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c22 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  margin-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: #e8ecf7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c23 {
  min-width: 0;
  box-sizing: border-box;
  margin: 8px;
  padding-left: 8px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 8px;
  margin: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 64px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
}

.c26 {
  min-width: 0;
  box-sizing: border-box;
}

.c27 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c28 {
  cursor: pointer;
  border: 1px solid #E0D7FE;
  background-color: transparent;
  border-color: #E0D7FE;
  color: core.black;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin: 8px;
  padding: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border: 0;
  border-width: 1px;
  border-radius: 4px;
  color: #000;
}

.c28:hover {
  opacity: 0.8;
}

.c3 {
  width: 64px;
  height: 64px;
}

.c17 {
  width: 40px;
  height: 40px;
}

.c5 {
  color: black;
  font-size: calc(48px + (48 - 32) * (100vw - 360px) / (1440 - 360));
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 16px;
}

.c7 {
  font-size: calc(48px + (48 - 32) * (100vw - 360px) / (1440 - 360));
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c8 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 140%;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 16px;
}

.c12 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c18 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-left: 24px;
  margin-top: 0;
  margin-bottom: 0;
}

.c19 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  max-width: 300px;
  margin-top: 0;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-right: 0;
  margin-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 120px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: url(/imgwallet.png) center no-repeat;
  background-size: 100%;
  border-radius: 16px;
}

.c4 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  margin-right: 8px;
  margin-top: 16px;
  margin-bottom: 16px;
  background-color: #FF9E80;
  color: #661800;
  font-size: 1.5rem;
}

.c14 {
  cursor: pointer;
  -webkit-transition: 0.13s ease-in-out;
  transition: 0.13s ease-in-out;
}

.c14:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

.c25 {
  cursor: pointer;
  -webkit-transition: 0.13s ease-in-out;
  transition: 0.13s ease-in-out;
}

.c25:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

@media screen and (min-width:40em) {
  .c1 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    width: 40%;
  }
}

@media screen and (min-width:40em) {
  .c6 {
    margin-top: 24px;
  }
}

@media screen and (min-width:52em) {
  .c6 {
    margin-top: 24px;
  }
}

@media screen and (min-width:40em) {
  .c2 {
    margin-right: 48px;
    margin-bottom: 0;
  }
}

@media screen and (min-width:40em) {
  .c2 {
    width: auto;
  }
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
    width="100%,100%,40%"
  >
    <div
      class="c2"
      display="flex"
      height="120px"
      width="100%,auto"
    >
      <svg
        class="c3 c4"
        fill="#fff"
        height="24"
        size="7"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M7.28131 9.18344C7.2736 9.16518 7.2696 9.14561 7.26953 9.12582V1.15017C7.26972 1.11023 7.28591 1.072 7.31454 1.04385C7.34316 1.01571 7.3819 0.999936 7.42226 1H19.8441C19.8844 0.999936 19.9232 1.01571 19.9518 1.04385C19.9804 1.072 19.9966 1.11023 19.9968 1.15017V2.64896C19.9967 2.66874 19.9927 2.68832 19.985 2.70658C19.9773 2.72483 19.966 2.7414 19.9519 2.75534C19.9377 2.76929 19.9209 2.78033 19.9024 2.78785C19.8839 2.79536 19.8641 2.79919 19.8441 2.79913H9.81499C9.6221 2.79913 9.43712 2.87495 9.30073 3.00991C9.16434 3.14487 9.08771 3.32792 9.08771 3.51878V6.75721C9.08771 6.94807 9.16434 7.13112 9.30073 7.26608C9.43712 7.40104 9.6221 7.47686 9.81499 7.47686H17.4513C17.6442 7.47686 17.8292 7.40104 17.9656 7.26608C18.102 7.13112 18.1786 6.94807 18.1786 6.75721C18.1786 6.56635 18.102 6.3833 17.9656 6.24834C17.8292 6.11338 17.6442 6.03756 17.4513 6.03756H10.695C10.675 6.03762 10.6552 6.03379 10.6367 6.02628C10.6182 6.01876 10.6014 6.00772 10.5872 5.99378C10.573 5.97983 10.5617 5.96326 10.554 5.94501C10.5463 5.92675 10.5423 5.90718 10.5423 5.88739V4.3886C10.5423 4.36882 10.5463 4.34924 10.554 4.33098C10.5617 4.31273 10.573 4.29616 10.5872 4.28222C10.6014 4.26827 10.6182 4.25723 10.6367 4.24971C10.6552 4.2422 10.675 4.23837 10.695 4.23843H19.8441C19.8641 4.23837 19.8839 4.2422 19.9024 4.24971C19.9209 4.25723 19.9377 4.26827 19.9519 4.28222C19.966 4.29616 19.9773 4.31273 19.985 4.33098C19.9927 4.34924 19.9967 4.36882 19.9968 4.3886V9.12582C19.9967 9.14561 19.9927 9.16518 19.985 9.18344C19.9773 9.20169 19.966 9.21826 19.9519 9.23221C19.9377 9.24615 19.9209 9.25719 19.9024 9.26471C19.8839 9.27222 19.8641 9.27605 19.8441 9.27599H7.42226C7.40227 9.27605 7.38246 9.27222 7.36396 9.26471C7.34547 9.25719 7.32865 9.24615 7.31447 9.23221C7.30028 9.21826 7.28902 9.20169 7.28131 9.18344ZM19.9549 15.7578C19.9262 15.7859 19.8874 15.8016 19.847 15.8015H4.15297C4.13286 15.8016 4.11294 15.7977 4.09436 15.7901C4.07577 15.7825 4.05888 15.7714 4.04466 15.7573C4.03045 15.7433 4.01918 15.7266 4.01152 15.7082C4.00385 15.6898 3.99994 15.6701 4 15.6502V14.1524C4.00019 14.1125 4.01641 14.0742 4.04509 14.0461C4.07377 14.018 4.11257 14.0022 4.15297 14.0024H19.847C19.8874 14.0022 19.9262 14.018 19.9549 14.0461C19.9836 14.0742 19.9998 14.1125 20 14.1524V15.6514C19.9998 15.6914 19.9836 15.7296 19.9549 15.7578ZM19.847 12.5603C19.867 12.5604 19.8868 12.5565 19.9053 12.5491C19.9238 12.5416 19.9407 12.5306 19.9549 12.5166C19.9691 12.5027 19.9804 12.4862 19.9881 12.4679C19.9959 12.4497 19.9999 12.4301 20 12.4103V10.9113C19.9998 10.8713 19.9836 10.8331 19.9549 10.8049C19.9262 10.7767 19.8874 10.761 19.847 10.7611H6.54546C6.35257 10.7611 6.16759 10.6853 6.0312 10.5503C5.89481 10.4154 5.81818 10.2323 5.81818 10.0415V1.1972C5.81831 1.15722 5.8024 1.11883 5.77395 1.09045C5.7455 1.06207 5.70682 1.04602 5.66643 1.04583H4.15176C4.11136 1.04602 4.07269 1.06207 4.04423 1.09045C4.01578 1.11883 3.99987 1.15722 4 1.1972V12.4103C4.00001 12.4485 4.01485 12.4852 4.04146 12.5128L4.04485 12.5164C4.0588 12.5301 4.07536 12.5411 4.09358 12.5485C4.11179 12.556 4.13132 12.5598 4.15103 12.5598H19.847V12.5603ZM4.01106 22.9071C4.00354 22.8886 3.99979 22.8689 4.00001 22.849V17.3945C4.0002 17.3545 4.01642 17.3162 4.0451 17.2881C4.07378 17.2599 4.11258 17.2442 4.15298 17.2443H19.847C19.8874 17.2442 19.9262 17.2599 19.9549 17.2881C19.9836 17.3162 19.9998 17.3545 20 17.3945V18.8929C19.9998 18.9329 19.9836 18.9712 19.9549 18.9993C19.9262 19.0275 19.8874 19.0432 19.847 19.0431H6.54546C6.35258 19.0431 6.16759 19.1189 6.0312 19.2538C5.89481 19.3887 5.81819 19.5718 5.81819 19.7626C5.81819 19.9534 5.89481 20.1364 6.0312 20.2713C6.16759 20.4063 6.35258 20.4821 6.54546 20.4821H19.847C19.8874 20.482 19.9262 20.4977 19.9549 20.5258C19.9836 20.554 19.9998 20.5922 20 20.6322V22.1319C19.9998 22.1719 19.9836 22.2101 19.9549 22.2383C19.9262 22.2664 19.8874 22.2822 19.847 22.282H6.39249C6.24039 22.282 6.0945 22.3417 5.98683 22.448C5.87916 22.5543 5.81851 22.6985 5.81819 22.849C5.81842 22.8689 5.81466 22.8886 5.80714 22.9071C5.79963 22.9255 5.78849 22.9423 5.77439 22.9565C5.76029 22.9707 5.74349 22.982 5.72496 22.9897C5.70643 22.9974 5.68654 23.0014 5.66643 23.0015H4.15177C4.13166 23.0014 4.11177 22.9974 4.09324 22.9897C4.07472 22.982 4.05792 22.9707 4.04381 22.9565C4.02971 22.9423 4.01858 22.9255 4.01106 22.9071Z"
          fill="#fff"
          fill-rule="evenodd"
        />
      </svg>
      <h1
        class="c5"
        color="black"
        font-family="RT-Alias-Grotesk"
        font-size="calc(48px + (48 - 32) * (100vw - 360px) / (1440 - 360))"
        font-weight="400"
      >
        Wallet
      </h1>
    </div>
    <div
      class="c6"
      display="flex"
    >
      <h1
        class="c7"
        font-family="RT-Alias-Grotesk"
        font-size="calc(48px + (48 - 32) * (100vw - 360px) / (1440 - 360))"
        font-weight="400"
      >
        A lightweight interface to send and receive Filecoin
      </h1>
      <h2
        class="c8"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        <span
          class="c9"
          color="status.warning.foreground"
          font-size="4"
        >
          Remember
        </span>
        For your protection, please check your browser's URL bar that you're visiting https://wallet.glif.io
      </h2>
    </div>
  </div>
  <div
    class="c10"
    display="flex"
    width="auto"
  >
    <div
      class="c11"
      display="flex"
    >
      <p
        class="c12"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Access via
      </p>
      <div
        class="c13 c14"
        display="flex"
        height="7"
        overflow="hidden"
        role="button"
        width="300"
      >
        <div
          class="c15"
          display="flex"
        >
          <div
            class="c16"
            color="#000"
            display="flex"
            size="6"
          >
            <svg
              class="c17"
              fill="none"
              height="40px"
              viewBox="0 0 24 24"
              width="40px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.0934 4H17.4067H17.4148C18.8148 4 19.9676 5.15197 19.9676 6.55279V13.866H10.0934V4ZM6.55349 4.00065H7.81386V7.81378H4.00065V6.55344C4.00065 5.15342 5.15345 4.00065 6.55349 4.00065ZM4 10.0934H7.81321V13.9066H4V10.0934ZM17.4479 19.9679H16.1875V16.1869H20.0007V17.4071V17.4151C20.0007 18.8151 18.8487 19.9679 17.4479 19.9679ZM10.0938 16.1869H13.907V20H10.0938V16.1869ZM4 17.4472V16.1869H7.81321V20H6.55284C5.15279 20 4 18.8472 4 17.4472Z"
                fill="#333333"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p
            class="c18"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            Ledger Device
          </p>
        </div>
      </div>
      <p
        class="c19"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Securely generate an account to receive your SAFT Filecoin
      </p>
      <div
        class="c20 c14"
        display="flex"
        height="7"
        overflow="hidden"
        role="button"
        width="300"
      >
        <div
          class="c15"
          display="flex"
        >
          <div
            class="c16"
            color="#000"
            display="flex"
            size="6"
          >
            <h3
              class="c21"
            >
              Ss
            </h3>
          </div>
          <p
            class="c18"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            SAFT Setup
          </p>
        </div>
      </div>
      <div
        class="c22"
        display="flex"
      >
        <div
          class="c23"
          display="flex"
        >
          <div
            class="c16"
            color="#000"
            display="flex"
            size="6"
          >
            <h3
              class="c21"
            >
              Dm
            </h3>
          </div>
          <p
            class="c18"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            Dev Mode
          </p>
        </div>
        <div
          class="c24 c25"
          display="flex"
          height="7"
          overflow="hidden"
          role="button"
          width="300"
        >
          <div
            class="c26"
          >
            <div
              class="c27"
              display="flex"
            >
              <div
                class="c16"
                color="#000"
                display="flex"
                size="6"
              >
                <h3
                  class="c21"
                >
                  Sp
                </h3>
              </div>
              <p
                class="c18"
                font-family="RT-Alias-Grotesk"
                font-size="2"
                font-weight="400"
              >
                Generate Seed Phrase
              </p>
            </div>
          </div>
        </div>
        <div
          class="c24 c14"
          display="flex"
          height="7"
          overflow="hidden"
          role="button"
          width="300"
        >
          <div
            class="c15"
            display="flex"
          >
            <div
              class="c16"
              color="#000"
              display="flex"
              size="6"
            >
              <h3
                class="c21"
              >
                Sp
              </h3>
            </div>
            <p
              class="c18"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Import Seed Phrase
            </p>
          </div>
        </div>
        <div
          class="c24 c14"
          display="flex"
          height="7"
          overflow="hidden"
          role="button"
          width="300"
        >
          <div
            class="c15"
            display="flex"
          >
            <div
              class="c16"
              color="#000"
              display="flex"
              size="6"
            >
              <h3
                class="c21"
              >
                Pk
              </h3>
            </div>
            <p
              class="c18"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Import Private Key
            </p>
          </div>
        </div>
        <button
          class="c28"
          color="core.black"
          font-size="3"
          height="6"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Choosing a wallet it renders correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 90vh;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  margin-bottom: 24px;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 560px;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  text-align: left;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  margin: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: auto;
  min-width: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 8px;
  margin-bottom: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 64px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  border: 0;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 8px;
  margin-bottom: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 64px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c22 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 8px;
  margin-top: 64px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  overflow: hidden;
  height: 64px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  justify-self: flex-end;
}

.c21 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c3 {
  width: 64px;
  height: 64px;
}

.c17 {
  width: 40px;
  height: 40px;
}

.c5 {
  color: black;
  font-size: calc(48px + (48 - 32) * (100vw - 360px) / (1440 - 360));
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-left: 16px;
}

.c7 {
  font-size: calc(48px + (48 - 32) * (100vw - 360px) / (1440 - 360));
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c8 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 140%;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 16px;
}

.c12 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c18 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-left: 24px;
  margin-top: 0;
  margin-bottom: 0;
}

.c19 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  max-width: 300px;
  margin-top: 0;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  margin-right: 0;
  margin-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 120px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: url(/imgwallet.png) center no-repeat;
  background-size: 100%;
  border-radius: 16px;
}

.c4 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 16px;
  padding-right: 16px;
  margin-right: 8px;
  margin-top: 16px;
  margin-bottom: 16px;
  background-color: #FF9E80;
  color: #661800;
  font-size: 1.5rem;
}

.c14 {
  cursor: pointer;
  -webkit-transition: 0.13s ease-in-out;
  transition: 0.13s ease-in-out;
}

.c14:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
}

@media screen and (min-width:40em) {
  .c1 {
    width: 100%;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    width: 40%;
  }
}

@media screen and (min-width:40em) {
  .c6 {
    margin-top: 24px;
  }
}

@media screen and (min-width:52em) {
  .c6 {
    margin-top: 24px;
  }
}

@media screen and (min-width:40em) {
  .c2 {
    margin-right: 48px;
    margin-bottom: 0;
  }
}

@media screen and (min-width:40em) {
  .c2 {
    width: auto;
  }
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    display="flex"
    width="100%,100%,40%"
  >
    <div
      class="c2"
      display="flex"
      height="120px"
      width="100%,auto"
    >
      <svg
        class="c3 c4"
        fill="#fff"
        height="24"
        size="7"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M7.28131 9.18344C7.2736 9.16518 7.2696 9.14561 7.26953 9.12582V1.15017C7.26972 1.11023 7.28591 1.072 7.31454 1.04385C7.34316 1.01571 7.3819 0.999936 7.42226 1H19.8441C19.8844 0.999936 19.9232 1.01571 19.9518 1.04385C19.9804 1.072 19.9966 1.11023 19.9968 1.15017V2.64896C19.9967 2.66874 19.9927 2.68832 19.985 2.70658C19.9773 2.72483 19.966 2.7414 19.9519 2.75534C19.9377 2.76929 19.9209 2.78033 19.9024 2.78785C19.8839 2.79536 19.8641 2.79919 19.8441 2.79913H9.81499C9.6221 2.79913 9.43712 2.87495 9.30073 3.00991C9.16434 3.14487 9.08771 3.32792 9.08771 3.51878V6.75721C9.08771 6.94807 9.16434 7.13112 9.30073 7.26608C9.43712 7.40104 9.6221 7.47686 9.81499 7.47686H17.4513C17.6442 7.47686 17.8292 7.40104 17.9656 7.26608C18.102 7.13112 18.1786 6.94807 18.1786 6.75721C18.1786 6.56635 18.102 6.3833 17.9656 6.24834C17.8292 6.11338 17.6442 6.03756 17.4513 6.03756H10.695C10.675 6.03762 10.6552 6.03379 10.6367 6.02628C10.6182 6.01876 10.6014 6.00772 10.5872 5.99378C10.573 5.97983 10.5617 5.96326 10.554 5.94501C10.5463 5.92675 10.5423 5.90718 10.5423 5.88739V4.3886C10.5423 4.36882 10.5463 4.34924 10.554 4.33098C10.5617 4.31273 10.573 4.29616 10.5872 4.28222C10.6014 4.26827 10.6182 4.25723 10.6367 4.24971C10.6552 4.2422 10.675 4.23837 10.695 4.23843H19.8441C19.8641 4.23837 19.8839 4.2422 19.9024 4.24971C19.9209 4.25723 19.9377 4.26827 19.9519 4.28222C19.966 4.29616 19.9773 4.31273 19.985 4.33098C19.9927 4.34924 19.9967 4.36882 19.9968 4.3886V9.12582C19.9967 9.14561 19.9927 9.16518 19.985 9.18344C19.9773 9.20169 19.966 9.21826 19.9519 9.23221C19.9377 9.24615 19.9209 9.25719 19.9024 9.26471C19.8839 9.27222 19.8641 9.27605 19.8441 9.27599H7.42226C7.40227 9.27605 7.38246 9.27222 7.36396 9.26471C7.34547 9.25719 7.32865 9.24615 7.31447 9.23221C7.30028 9.21826 7.28902 9.20169 7.28131 9.18344ZM19.9549 15.7578C19.9262 15.7859 19.8874 15.8016 19.847 15.8015H4.15297C4.13286 15.8016 4.11294 15.7977 4.09436 15.7901C4.07577 15.7825 4.05888 15.7714 4.04466 15.7573C4.03045 15.7433 4.01918 15.7266 4.01152 15.7082C4.00385 15.6898 3.99994 15.6701 4 15.6502V14.1524C4.00019 14.1125 4.01641 14.0742 4.04509 14.0461C4.07377 14.018 4.11257 14.0022 4.15297 14.0024H19.847C19.8874 14.0022 19.9262 14.018 19.9549 14.0461C19.9836 14.0742 19.9998 14.1125 20 14.1524V15.6514C19.9998 15.6914 19.9836 15.7296 19.9549 15.7578ZM19.847 12.5603C19.867 12.5604 19.8868 12.5565 19.9053 12.5491C19.9238 12.5416 19.9407 12.5306 19.9549 12.5166C19.9691 12.5027 19.9804 12.4862 19.9881 12.4679C19.9959 12.4497 19.9999 12.4301 20 12.4103V10.9113C19.9998 10.8713 19.9836 10.8331 19.9549 10.8049C19.9262 10.7767 19.8874 10.761 19.847 10.7611H6.54546C6.35257 10.7611 6.16759 10.6853 6.0312 10.5503C5.89481 10.4154 5.81818 10.2323 5.81818 10.0415V1.1972C5.81831 1.15722 5.8024 1.11883 5.77395 1.09045C5.7455 1.06207 5.70682 1.04602 5.66643 1.04583H4.15176C4.11136 1.04602 4.07269 1.06207 4.04423 1.09045C4.01578 1.11883 3.99987 1.15722 4 1.1972V12.4103C4.00001 12.4485 4.01485 12.4852 4.04146 12.5128L4.04485 12.5164C4.0588 12.5301 4.07536 12.5411 4.09358 12.5485C4.11179 12.556 4.13132 12.5598 4.15103 12.5598H19.847V12.5603ZM4.01106 22.9071C4.00354 22.8886 3.99979 22.8689 4.00001 22.849V17.3945C4.0002 17.3545 4.01642 17.3162 4.0451 17.2881C4.07378 17.2599 4.11258 17.2442 4.15298 17.2443H19.847C19.8874 17.2442 19.9262 17.2599 19.9549 17.2881C19.9836 17.3162 19.9998 17.3545 20 17.3945V18.8929C19.9998 18.9329 19.9836 18.9712 19.9549 18.9993C19.9262 19.0275 19.8874 19.0432 19.847 19.0431H6.54546C6.35258 19.0431 6.16759 19.1189 6.0312 19.2538C5.89481 19.3887 5.81819 19.5718 5.81819 19.7626C5.81819 19.9534 5.89481 20.1364 6.0312 20.2713C6.16759 20.4063 6.35258 20.4821 6.54546 20.4821H19.847C19.8874 20.482 19.9262 20.4977 19.9549 20.5258C19.9836 20.554 19.9998 20.5922 20 20.6322V22.1319C19.9998 22.1719 19.9836 22.2101 19.9549 22.2383C19.9262 22.2664 19.8874 22.2822 19.847 22.282H6.39249C6.24039 22.282 6.0945 22.3417 5.98683 22.448C5.87916 22.5543 5.81851 22.6985 5.81819 22.849C5.81842 22.8689 5.81466 22.8886 5.80714 22.9071C5.79963 22.9255 5.78849 22.9423 5.77439 22.9565C5.76029 22.9707 5.74349 22.982 5.72496 22.9897C5.70643 22.9974 5.68654 23.0014 5.66643 23.0015H4.15177C4.13166 23.0014 4.11177 22.9974 4.09324 22.9897C4.07472 22.982 4.05792 22.9707 4.04381 22.9565C4.02971 22.9423 4.01858 22.9255 4.01106 22.9071Z"
          fill="#fff"
          fill-rule="evenodd"
        />
      </svg>
      <h1
        class="c5"
        color="black"
        font-family="RT-Alias-Grotesk"
        font-size="calc(48px + (48 - 32) * (100vw - 360px) / (1440 - 360))"
        font-weight="400"
      >
        Wallet
      </h1>
    </div>
    <div
      class="c6"
      display="flex"
    >
      <h1
        class="c7"
        font-family="RT-Alias-Grotesk"
        font-size="calc(48px + (48 - 32) * (100vw - 360px) / (1440 - 360))"
        font-weight="400"
      >
        A lightweight interface to send and receive Filecoin
      </h1>
      <h2
        class="c8"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        <span
          class="c9"
          color="status.warning.foreground"
          font-size="4"
        >
          Remember
        </span>
        For your protection, please check your browser's URL bar that you're visiting https://wallet.glif.io
      </h2>
    </div>
  </div>
  <div
    class="c10"
    display="flex"
    width="auto"
  >
    <div
      class="c11"
      display="flex"
    >
      <p
        class="c12"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Access via
      </p>
      <div
        class="c13 c14"
        display="flex"
        height="7"
        overflow="hidden"
        role="button"
        width="300"
      >
        <div
          class="c15"
          display="flex"
        >
          <div
            class="c16"
            color="#000"
            display="flex"
            size="6"
          >
            <svg
              class="c17"
              fill="none"
              height="40px"
              viewBox="0 0 24 24"
              width="40px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.0934 4H17.4067H17.4148C18.8148 4 19.9676 5.15197 19.9676 6.55279V13.866H10.0934V4ZM6.55349 4.00065H7.81386V7.81378H4.00065V6.55344C4.00065 5.15342 5.15345 4.00065 6.55349 4.00065ZM4 10.0934H7.81321V13.9066H4V10.0934ZM17.4479 19.9679H16.1875V16.1869H20.0007V17.4071V17.4151C20.0007 18.8151 18.8487 19.9679 17.4479 19.9679ZM10.0938 16.1869H13.907V20H10.0938V16.1869ZM4 17.4472V16.1869H7.81321V20H6.55284C5.15279 20 4 18.8472 4 17.4472Z"
                fill="#333333"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <p
            class="c18"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            Ledger Device
          </p>
        </div>
      </div>
      <p
        class="c19"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Securely generate an account to receive your SAFT Filecoin
      </p>
      <div
        class="c20 c14"
        display="flex"
        height="7"
        overflow="hidden"
        role="button"
        width="300"
      >
        <div
          class="c15"
          display="flex"
        >
          <div
            class="c16"
            color="#000"
            display="flex"
            size="6"
          >
            <h3
              class="c21"
            >
              Ss
            </h3>
          </div>
          <p
            class="c18"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            SAFT Setup
          </p>
        </div>
      </div>
    </div>
    <div
      class="c22 c14 "
      display="flex"
      height="7"
      overflow="hidden"
      role="button"
      width="300"
    >
      <div
        class="c15"
        display="flex"
      >
        <div
          class="c16"
          color="#000"
          display="flex"
          size="6"
        >
          <h3
            class="c21"
          >
            Dm
          </h3>
        </div>
        <p
          class="c18"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Dev Mode
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Choosing a wallet it renders warning text for create wallet option 1`] = `
.c3 {
  min-width: 0;
  box-sizing: border-box;
}

.c0 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 90vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FF9E80;
  padding: 16px;
  margin-left: 8px;
  background-color: #FF9E80;
  color: #661800;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 560px;
  min-height: 300px;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #661800;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c10 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-top: 32px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c10:hover {
  opacity: 0.8;
}

.c11 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-top: 32px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c11:hover {
  opacity: 0.8;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 24px;
  margin-bottom: 8px;
}

.c7 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #ffffff;
  font-size: 1.25rem;
}

.c8:hover {
  border-bottom: 2px solid #5E26FF;
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {

}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {

}

@media screen and (min-width:40em) {

}

@media screen and (min-width:40em) {

}

<div
  class="c0"
  display="flex"
  height="90vh"
  width="100%"
>
  <div
    class="c1"
    display="flex"
  >
    <div
      class="c2"
      color="status.warning.foreground"
      display="flex"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          color="status.warning.foreground"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Wn
          </h3>
        </div>
        <h2
          class="c6"
          font-family="RT-Alias-Grotesk"
          font-size="4"
          font-weight="400"
        >
          Warning
        </h2>
        <p
          class="c7"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          We do not recommend you use this account to hold or transact significant sums of Filecoin. This account is for testing purposes only. For significant sums, Glif should only be used with a Ledger hardware wallet.
        </p>
      </div>
      <div
        class="c3"
      >
        <a
          class="c8"
          color="core.white"
          font-size="3"
          href="https://coinsutra.com/security-risks-bitcoin-wallets/"
          rel="noopener"
          target="_blank"
        >
          Why isn't it secure?
        </a>
      </div>
    </div>
    <div
      class="c9"
      display="flex"
    >
      <button
        class="c10"
        font-size="3"
        height="6"
        type="button"
      >
        Back
      </button>
      <button
        class="c11"
        font-size="3"
        height="6"
        type="button"
      >
        I Understand
      </button>
    </div>
  </div>
</div>
`;

exports[`Choosing a wallet it renders warning text for import private key option 1`] = `
.c3 {
  min-width: 0;
  box-sizing: border-box;
}

.c0 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 90vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FF9E80;
  padding: 16px;
  margin-left: 8px;
  background-color: #FF9E80;
  color: #661800;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 560px;
  min-height: 300px;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #661800;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c10 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-top: 32px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c10:hover {
  opacity: 0.8;
}

.c11 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-top: 32px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c11:hover {
  opacity: 0.8;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 24px;
  margin-bottom: 8px;
}

.c7 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #ffffff;
  font-size: 1.25rem;
}

.c8:hover {
  border-bottom: 2px solid #5E26FF;
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {

}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {

}

@media screen and (min-width:40em) {

}

@media screen and (min-width:40em) {

}

<div
  class="c0"
  display="flex"
  height="90vh"
  width="100%"
>
  <div
    class="c1"
    display="flex"
  >
    <div
      class="c2"
      color="status.warning.foreground"
      display="flex"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          color="status.warning.foreground"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Wn
          </h3>
        </div>
        <h2
          class="c6"
          font-family="RT-Alias-Grotesk"
          font-size="4"
          font-weight="400"
        >
          Warning
        </h2>
        <p
          class="c7"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          We do not recommend you use this account to hold or transact significant sums of Filecoin. This account is for testing purposes only. For significant sums, Glif should only be used with a Ledger hardware wallet.
        </p>
      </div>
      <div
        class="c3"
      >
        <a
          class="c8"
          color="core.white"
          font-size="3"
          href="https://coinsutra.com/security-risks-bitcoin-wallets/"
          rel="noopener"
          target="_blank"
        >
          Why isn't it secure?
        </a>
      </div>
    </div>
    <div
      class="c9"
      display="flex"
    >
      <button
        class="c10"
        font-size="3"
        height="6"
        type="button"
      >
        Back
      </button>
      <button
        class="c11"
        font-size="3"
        height="6"
        type="button"
      >
        I Understand
      </button>
    </div>
  </div>
</div>
`;

exports[`Choosing a wallet it renders warning text for import seed option 1`] = `
.c3 {
  min-width: 0;
  box-sizing: border-box;
}

.c0 {
  min-width: 0;
  box-sizing: border-box;
  padding: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 90vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  border-color: #FF9E80;
  padding: 16px;
  margin-left: 8px;
  background-color: #FF9E80;
  color: #661800;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 560px;
  min-height: 300px;
  overflow: hidden;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #661800;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c10 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-top: 32px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c10:hover {
  opacity: 0.8;
}

.c11 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-top: 32px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c11:hover {
  opacity: 0.8;
}

.c6 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 24px;
  margin-bottom: 8px;
}

.c7 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c8 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #ffffff;
  font-size: 1.25rem;
}

.c8:hover {
  border-bottom: 2px solid #5E26FF;
}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {

}

@media screen and (min-width:40em) {

}

@media screen and (min-width:52em) {

}

@media screen and (min-width:40em) {

}

@media screen and (min-width:40em) {

}

<div
  class="c0"
  display="flex"
  height="90vh"
  width="100%"
>
  <div
    class="c1"
    display="flex"
  >
    <div
      class="c2"
      color="status.warning.foreground"
      display="flex"
      overflow="hidden"
      width="100%"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          color="status.warning.foreground"
          display="flex"
          size="6"
        >
          <h3
            class="c5"
          >
            Wn
          </h3>
        </div>
        <h2
          class="c6"
          font-family="RT-Alias-Grotesk"
          font-size="4"
          font-weight="400"
        >
          Warning
        </h2>
        <p
          class="c7"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          We do not recommend you use this account to hold or transact significant sums of Filecoin. This account is for testing purposes only. For significant sums, Glif should only be used with a Ledger hardware wallet.
        </p>
      </div>
      <div
        class="c3"
      >
        <a
          class="c8"
          color="core.white"
          font-size="3"
          href="https://coinsutra.com/security-risks-bitcoin-wallets/"
          rel="noopener"
          target="_blank"
        >
          Why isn't it secure?
        </a>
      </div>
    </div>
    <div
      class="c9"
      display="flex"
    >
      <button
        class="c10"
        font-size="3"
        height="6"
        type="button"
      >
        Back
      </button>
      <button
        class="c11"
        font-size="3"
        height="6"
        type="button"
      >
        I Understand
      </button>
    </div>
  </div>
</div>
`;
